[package]
name = "advent-2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
pathfinding = "4.0"
smallvec = "1.7"
anyhow = "1.0"
ahash = "0.8"
rustc-hash = "1.1"
rayon = "1.6"
memoize = "0.3"

#bitvec = "0.22"
#ndarray = "0.15"
#num = "0.4"
#gif = "0.12"

[profile.release]
lto = "fat"
panic = "abort"
#debug = true
